Added Timeout deletion
